DockerFile Updated